package bien;

public enum EstadoUso {
  NUEVO,
  USADO
}
