package donaciones;

public enum Estados {
  ENDEPOSITO,
  ENTRASLADO,
  ENTREGAFALLIDA
}
