package donaciones;

public enum Unidad {
  LITRO,
  KILOGRAMO,
  UNIDAD
}
