package Enums;

public enum EstadoDonacion {
  ENDEPOSITO,
  ASIGNACIONREALIZADA,
  LISTAPARAENTREGAR,
  ENTRASLADO,
  ENTREGADA,
  ENTREGAFALLIDA,
  VENCIDA
}
