package Modelos;

import Errors.ErrorParametrosConstructor;
import lombok.Getter;
import lombok.Setter;

public class Notificacion {
  private UsuarioDonante destinatario;
  private String mensaje;
  private MedioDeNotificacion medioDeNotificacion;
  @Setter
  @Getter
  private Boolean completada;
  public Notificacion(UsuarioDonante destinatario, String mensaje,MedioDeNotificacion medioDeNotificacion) {
    validarConstructor(destinatario, mensaje, medioDeNotificacion);
    this.destinatario = destinatario;
    this.mensaje = mensaje;
    this.medioDeNotificacion = medioDeNotificacion;
    this.completada = false;
  }

  public void enviarMensaje(){
    //// enviarmensaje
    medioDeNotificacion.EnviarMensaje(destinatario, mensaje);
    //// supongo que fue  realizada con exito
    setCompletada(true);
  }
  private void validarConstructor(UsuarioDonante destinatario, String mensaje, MedioDeNotificacion medioDeNotificacion) {
    if (destinatario == null || mensaje == null || medioDeNotificacion == null) {
      throw new ErrorParametrosConstructor("Faltan parámetros en el constructor.");
    }
  }
}
